--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 e.target.setAttribute('data-id',emptyId);
                 emptyLi.setAttribute('data-id',currentId);
                 oGrades.innerHTML = grades;
-                e.target.innerHTML = emptyId;
-                emptyLi.innerHTML = currentId;
+                /*e.target.innerHTML = emptyId;
+                emptyLi.innerHTML = currentId;*/
 
 
                 isSuccess(oLi,emptyLi);
